--- a/test/test_contents_output.html
+++ b/test/test_contents_output.html
@@ -1,1 +1,1 @@
-This works!
+<h1> My Life in Desserts</h1><p></p><h2> Chapter 1: The Beginning</h2><p></p><p>"You just <em>have</em> to try the cheesecake," he said. "Ever since it appeared in</p><p><strong>Food & Wine</strong> this place has been packed every night."</p>
